minor changes
- Initial stream development
- Paymentsd package initialized
