# backend/internal/playerservice/gen/http/openapi3.yaml
@@ -21,100 +21,112 @@ paths:
         schema:
           type: integer
           description: ID of the Track
-          example: 3465175292282028801
-        example: 8178752941220215374
+          example: 15849484324231435404
+        example: 4274324650275255288
       responses:
         "200":
           description: OK response.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/StreamTrackResponse'
+                $ref: '#/components/schemas/MusicFileResponse'
               example:
-                track:
-                - 73
-                - 112
-                - 115
+                file:
+                - 72
                 - 97
+                - 114
+                - 117
                 - 109
                 - 32
-                - 101
-                - 97
-                - 113
                 - 117
+                - 116
+                - 32
+                - 105
+                - 110
+                - 118
                 - 101
+                - 110
+                - 116
+                - 111
+                - 114
+                - 101
+                - 32
+                - 101
+                - 115
+                - 115
+                - 101
+                - 32
+                - 105
+                - 100
                 - 46
 components:
   schemas:
-    StreamTrackResponse:
+    MusicFileResponse:
       type: object
       properties:
-        track:
+        file:
           type: string
-          description: Operation completion status
           example:
-          - 86
-          - 101
-          - 114
+          - 77
+          - 105
+          - 110
+          - 105
+          - 109
+          - 97
+          - 32
+          - 99
           - 111
-          - 32
-          - 97
-          - 112
-          - 101
-          - 114
+          - 109
+          - 109
+          - 111
+          - 100
           - 105
-          - 97
-          - 109
-          - 32
-          - 118
-          - 101
-          - 110
-          - 105
-          - 97
-          - 109
-          - 32
-          - 109
-          - 97
-          - 103
-          - 110
-          - 97
-          - 109
           - 32
           - 113
           - 117
-          - 105
+          - 111
+          - 100
           - 32
+          - 100
+          - 111
+          - 108
+          - 111
+          - 114
           - 101
-          - 115
-          - 116
-          - 32
-          - 101
-          - 110
-          - 105
           - 109
           - 46
           format: binary
       example:
-        track:
-        - 77
-        - 105
-        - 110
-        - 105
-        - 109
-        - 97
+        file:
+        - 81
+        - 117
+        - 111
         - 32
-        - 99
-        - 111
-        - 109
-        - 109
-        - 111
-        - 100
-        - 105
+        - 101
+        - 116
         - 32
         - 113
         - 117
-        - 111
+        - 105
+        - 98
+        - 117
+        - 115
         - 100
+        - 97
+        - 109
+        - 32
+        - 118
+        - 101
+        - 108
+        - 105
+        - 116
+        - 32
+        - 115
+        - 111
+        - 108
+        - 117
+        - 116
+        - 97
         - 32
         - 100
         - 111
@@ -122,10 +134,10 @@ components:
         - 111
         - 114
         - 101
-        - 109
+        - 32
+        - 101
+        - 116
         - 46
-      required:
-      - track
 tags:
 - name: player
   description: Player operations
